--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <title>React App</title>
     <link rel="stylesheet" href="primereact/resources/themes/lara-light-blue/theme.css">
   </head>
-  <body style="overflow: hidden;">
+  <body style="">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
