Zezwolenie na indexowanie przez roboty

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="Smart Home system based on Arduino and Node.js. Control lights, security, and devices via a web app with voice control and custom scenarios. Secure API with JWT." />
     <meta name="keywords" content="Smart Home, Arduino, Node.js, Home Automation, IoT, DIY Smart Home, Home Control, Automation System" />
     <meta name="author" content="Paweł Boroń" />
+    <meta name="robots" content="index, follow" />
     <link rel="stylesheet" href="primereact/resources/themes/lara-light-blue/theme.css">
   </head>
   <body style="overflow-x: none !important;">
